--- a/index.html
+++ b/index.html
@@ -15,45 +15,8 @@
         <div class="underline"></div>
       </div>
       <section class="followers">
-        <div class="container">
-          <!-- single card -->
-          <article class="card">
-            <img
-              src="https://avatars.githubusercontent.com/u/3006?v=4"
-              alt="name"
-            />
-            <h4>name</h4>
-            <a href="" class="btn">view profile</a>
-          </article>
-          <!-- end of single card -->
-          <!-- single card -->
-          <article class="card">
-            <img
-              src="https://avatars.githubusercontent.com/u/3006?v=4"
-              alt="name"
-            />
-            <h4>name</h4>
-            <a href="" class="btn">view profile</a>
-          </article>
-          <!-- end of single card -->
-          <!-- single card -->
-          <article class="card">
-            <img
-              src="https://avatars.githubusercontent.com/u/3006?v=4"
-              alt="name"
-            />
-            <h4>name</h4>
-            <a href="" class="btn">view profile</a>
-          </article>
-          <!-- end of single card -->
-        </div>
-        <div class="btn-container">
-          <button class="prev-btn">prev</button>
-          <button class="page-btn active-btn">1</button>
-          <button class="page-btn">2</button>
-          <button class="page-btn">3</button>
-          <button class="next-btn">next</button>
-        </div>
+        <div class="container"></div>
+        <div class="btn-container"></div>
       </section>
     </main>
     <!-- javascript -->
